--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
   </head>
   <body>
+    <h1> this is a sketch that does stuff </h1>
     <script src="sketch.js"></script>
-  
+
 
 </body></html>
